# libdarkneypy

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  setup.py  test.py  vcpkg-configuration.json  vcpkg.json
.github/workflows/: conda.yml  format.yml  pip.yml  wheels.yml
conda.recipe/: meta.yaml
docs/: Makefile  cmake_example.rst  conf.py  index.rst  make.bat
helpers/: __init__.py  install_vcpkg.py  lipo_dir_merge.py
src/: main.cpp
src/libdarknetpy/: CMakeLists.txt  __init__.py  __init__.pyi  _libdarknetpy.pyi  main.cpp
stubs/: __init__.pyi
tests/: test_basic.py
